<resources>
    <string name="app_name" translatable="false">Android Kejar Beginner</string>

    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="select_photo">Select Photo</string>
    <string name="selected">Selected</string>
    <string name="not_yet_selected">Not yet selected</string>
    <string name="ok" translatable="false">OK</string>
    <string name="hi">Hi, my name is</string>
</resources>
